# lemire-Code-used-on-Daniel-Lemire-s-blog

2022/12/29/: protocol.cpp
2023/06/08/: Makefile
2023/06/08/benchmarks/: benchmark.cpp
2023/06/08/include/: avx512_ton.h
2026/03/18/: amd.txt  intel.txt  m4.txt  plot_bm.py  post.md
2026/03/18/benchmark/: CMakeLists.txt
2026/03/18/benchmark/benchmarks/: benchmark.cpp
2026/03/29/: post.md
2026/04/02/: README.md  post.md
2026/04/02/benchmark/: README.md
2026/04/02/benchmark/benchmarks/: benchmark.cpp
2026/04/14/: CMakeLists.txt
2026/04/14/src/: main1.cpp  main2.cpp  main3.cpp  main4.cpp
2026/04/17/: post.md
2026/04/17/benchmark/: CMakeLists.txt  README.md  dump_asm.sh
2026/04/17/benchmark/benchmarks/: benchmark.cpp
2026/04/17/benchmark/include/: neon.h  sve.h
2026/04/26/: applem4.txt  intel.txt  plot_comparison.py  post.md
2026/04/26/benchmark/: CMakeLists.txt
2026/04/26/benchmark/benchmarks/: benchmark.cpp  simple.cpp
2026/05/05/: post.md
extra/sorted-intersection/: Makefile  sortedintersection.cpp
tools/: mdtohtml.py
